<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spark Mod Manager</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="checkbox_touchkey_dimmer">Touchkey Backlight Dimmer</string>
    <string name="checkbox_screen_dimmer">Screen Dimmer</string>
    <string name="checkbox_touch_wake">Touch Wake</string>
    <string name="button_apply">Apply</string>
    <string name="text_chechbox_message">Enable or disable the following mods by Ezekeel</string>
    <string name="dialog_text">Spark Mod Manager is an easy to use front-end for Ezekeel\'s kernel mods. App by Jonathon Grigg (@jonathongrigg). \n\nTo use, simply check whatever features you want enabled, and hit apply. Settings will be reset after a reboot, this will be changed in the future.</string>
    <string name="dialog_title">About</string>
</resources>
